# ClaudeBuddy

./: .env.example  .gitignore  README.md  package-lock.json  package.json
client/: index.html  vite.config.js
client/src/: App.css  App.jsx
electron/: main.js  preload.js  tray.js
screenshots/: .gitkeep
scripts/: claude-with-dashboard.sh  launcher.js  open-dashboard.sh
server/: index.js  pyproject.toml  requirements.txt
server/app/: __init__.py  config.py  main.py
server/app/agents/: __init__.py  researcher.py  state.py  supervisor.py  tools.py  writer.py
server/app/routers/: __init__.py  agents.py  history.py  insights.py  mcp.py  projects.py  research.py  stats.py  team.py
server/app/services/: __init__.py  cache.py  claude_reader.py  cost_calculator.py  team_sync.py
